--- a/app/src/main/res/layout/item_resourcesfaqs.xml
+++ b/app/src/main/res/layout/item_resourcesfaqs.xml
@@ -4,8 +4,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_marginBottom="16dp">
+    android:background="@color/background"
+    android:padding="16dp"
+    android:layout_height="wrap_content">
 
 
     <RelativeLayout
@@ -21,16 +22,10 @@
             android:layout_height="wrap_content"
             android:fontFamily="@font/gotham_medium"
             android:text="This is a title"
-            android:textColor="@color/titlecolor"
+            android:textColor="@color/white"
             android:textSize="18dp" />
 
-        <RelativeLayout
-        android:id="@+id/faq_button"
-            android:clickable="true"
-            android:focusable="true"
-        android:layout_width="60dp"
-        android:layout_height="36dp"
-            android:layout_alignParentEnd="true">
+
         <Button
             android:id="@+id/faq_button_nested"
             android:layout_width="18dp"
@@ -40,7 +35,16 @@
             android:layout_marginTop="4dp"
             android:layout_marginEnd="16dp"
             android:background="@drawable/ic_faq_button" />
-    </RelativeLayout>
+        <Button
+            android:id="@+id/faq_buttonup"
+            android:layout_width="18dp"
+            android:layout_height="12dp"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentEnd="true"
+            android:layout_marginTop="4dp"
+            android:layout_marginEnd="16dp"
+            android:background="@drawable/ic_uparrow"/>
+
 
         <TextView
             android:id="@+id/faqanswer"
@@ -50,7 +54,7 @@
             android:layout_marginTop="8dp"
             android:fontFamily="@font/gotham_light"
             android:text="sample text here"
-            android:textColor="@color/titlecolor"
+            android:textColor="@color/white"
             android:textSize="14dp" />
     </RelativeLayout>
 
