--- a/app/src/main/res/layout/item_resourcesfiles.xml
+++ b/app/src/main/res/layout/item_resourcesfiles.xml
@@ -5,7 +5,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginBottom="32dp">
+    android:background="@color/background"
+    android:padding="16dp">
 
     <ImageView
         android:id="@+id/resday1image"
@@ -19,7 +20,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="@font/gotham_medium"
-        android:textColor="@color/titlecolor"
+        android:textColor="@color/white"
         android:textSize="16dp"
         android:text="This is a title"
         android:layout_marginStart="8dp"
@@ -30,7 +31,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="@font/gotham_light"
-        android:textColor="@color/titlecolor"
+        android:textColor="@color/white"
         android:textSize="14dp"
         android:text="This is a desc"
         android:layout_marginStart="8dp"
@@ -41,7 +42,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="@font/gotham_light"
-        android:textColor="@color/titlecolor"
+        android:textColor="@color/white"
         android:textSize="12dp"
         android:text="03/10/2020"
         android:layout_marginTop="2dp"
@@ -49,23 +50,8 @@
         app:layout_constraintStart_toEndOf="@+id/resday1image"
         app:layout_constraintTop_toBottomOf="@+id/resfilesdesc" />
 
-    <RelativeLayout
-        android:id="@+id/resfiles_button"
-        android:layout_width="36dp"
-        android:layout_height="match_parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
 
-        <Button
-            android:id="@+id/resfiles_buttton_nested"
-            android:layout_width="5dp"
-            android:layout_height="25dp"
-            android:layout_centerHorizontal="true"
-            android:layout_alignParentEnd="true"
-            android:layout_marginEnd="12dp"
-            android:background="@drawable/ic_resfiles_popup" />
-    </RelativeLayout>
+
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
