--- a/app/src/main/res/drawable/ic_faq_button.xml
+++ b/app/src/main/res/drawable/ic_faq_button.xml
@@ -5,6 +5,6 @@
     android:viewportHeight="9">
   <path
       android:pathData="M7.2929,8.7071C7.6834,9.0976 8.3166,9.0976 8.7071,8.7071L15.0711,2.3431C15.4616,1.9526 15.4616,1.3195 15.0711,0.9289C14.6805,0.5384 14.0474,0.5384 13.6569,0.9289L8,6.5858L2.3431,0.9289C1.9526,0.5384 1.3195,0.5384 0.9289,0.9289C0.5384,1.3195 0.5384,1.9526 0.9289,2.3431L7.2929,8.7071ZM7,7V8H9V7H7Z"
-      android:fillColor="#01224D"
+      android:fillColor="#ffffff"
       android:strokeWidth="4"/>
 </vector>
