--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/container"
     android:layout_width="match_parent"
-    android:background="@color/white"
+    android:background="@color/background"
     android:layout_height="match_parent">
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/appBar"
@@ -14,7 +14,7 @@
         android:layout_marginBottom="4dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        android:background="@color/white"
+        android:background="@color/background"
         app:layout_constraintTop_toTopOf="parent">
 
         <TextView
@@ -23,7 +23,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:text="Timeline"
-            android:textColor="@color/titlecolor"
+            android:textColor="@color/white"
             android:textSize="32dp"
             android:fontFamily="@font/gotham_medium"
             app:layout_constraintBottom_toBottomOf="parent"
