--- a/app/src/main/res/layout/fragment_resfaqs.xml
+++ b/app/src/main/res/layout/fragment_resfaqs.xml
@@ -1,16 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/eventSwipeRefresh"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:padding="16dp"
-        android:layout_marginTop="16dp">
 
         <ProgressBar
             android:id="@+id/progressbarfaq"
@@ -18,15 +12,17 @@
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
             android:indeterminate="true"
-            android:indeterminateTint="@color/colorPrimary"
+            android:indeterminateTint="@color/white"
             android:indeterminateTintMode="src_atop"/>
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/faqRecyclerView"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentEnd="true"
+            android:layout_marginTop="16dp" />
 
 
-    </RelativeLayout>
-</androidx.core.widget.NestedScrollView>
+</RelativeLayout>
 
