--- a/app/src/main/res/layout/fragment_resfiles.xml
+++ b/app/src/main/res/layout/fragment_resfiles.xml
@@ -1,16 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/eventSwipeRefresh"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
 
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:padding="16dp"
-            android:layout_marginTop="16dp">
 
             <ProgressBar
                 android:id="@+id/progressbarresfiles"
@@ -18,15 +13,14 @@
                 android:layout_height="wrap_content"
                 android:layout_centerInParent="true"
                 android:indeterminate="true"
-                android:indeterminateTint="@color/colorPrimary"
+                android:indeterminateTint="@color/white"
                 android:indeterminateTintMode="src_atop"/>
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/resfilesRecyclerView"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"/>
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"/>
 
 
-
-        </RelativeLayout>
-    </androidx.core.widget.NestedScrollView>
+    </RelativeLayout>
