--- a/app/src/main/res/layout/fragment_submissions.xml
+++ b/app/src/main/res/layout/fragment_submissions.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
+    android:background="@color/background"
     android:layout_height="match_parent">
 
     <LinearLayout
@@ -27,11 +28,11 @@
                 android:id="@+id/tabLayoutsubmission"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@color/white"
+                android:background="@color/background"
                 app:tabGravity="fill"
-                app:tabIndicatorColor="@color/titlecolor"
+                app:tabIndicatorColor="@color/white"
                 app:tabMode="fixed"
-                app:tabSelectedTextColor="@color/titlecolor"
+                app:tabSelectedTextColor="@color/white"
                 app:tabTextAppearance="@style/tab_font"
                 app:tabTextColor="@color/tab_inactive">
 
