--- a/app/src/main/res/layout/item_timelineday2.xml
+++ b/app/src/main/res/layout/item_timelineday2.xml
@@ -3,7 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="8dp"
-    android:background="@color/white">
+    android:background="@color/background">
 
 
 
@@ -13,7 +13,7 @@
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
             android:indeterminate="true"
-            android:indeterminateTint="@color/colorPrimary"
+            android:indeterminateTint="@color/white"
             android:indeterminateTintMode="src_atop"/>
         <ImageView
             android:layout_width="match_parent"
