--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,7 +3,7 @@
     <color name="colorPrimary">#305BC9</color>
     <color name="colorPrimaryDark">#305BC9</color>
     <color name="colorAccent">#305BC9</color>
-    <color name="white">#ffffff</color>
+    <color name="background">#01224D</color>
     <color name="tab_inactive">#C4C4C4</color>
-    <color name="titlecolor">#01224D</color>
+    <color name="white">#ffffff</color>
 </resources>
