--- a/app/src/main/res/layout/fragment_leaderboard.xml
+++ b/app/src/main/res/layout/fragment_leaderboard.xml
@@ -18,6 +18,20 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <TextView
+        android:id="@+id/tv_internetcheck"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:text="Check your internet !"
+        android:textColor="@color/white"
+        android:textSize="24dp"
+        android:visibility="invisible"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <ImageView
         android:id="@+id/imageview_leader_1"
         android:layout_width="80dp"
@@ -46,79 +60,72 @@
         app:layout_constraintTop_toBottomOf="@+id/imageview_leader_2" />
 
     <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textColor="@color/white"
-        android:textSize="22dp"
         android:id="@+id/tv_leaderboard_1"
-        android:text="First Place"
-        android:fontFamily="@font/gotham_medium"
-        app:layout_constraintTop_toTopOf="@+id/imageview_leader_1"
-        app:layout_constraintStart_toEndOf="@+id/imageview_leader_1"
-        android:layout_marginStart="24dp"
-        android:layout_marginTop="16dp"
-        />
-    <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="16dp"
+        android:fontFamily="@font/gotham_medium"
         android:textColor="@color/white"
-        android:textSize="20dp"
+        android:textSize="22dp"
+        app:layout_constraintStart_toEndOf="@+id/imageview_leader_1"
+        app:layout_constraintTop_toTopOf="@+id/imageview_leader_1" />
+
+    <TextView
         android:id="@+id/tv_name_1"
-        android:text="Prajesh"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="24dp"
         android:fontFamily="@font/gotham_regular"
-        app:layout_constraintTop_toBottomOf="@+id/tv_leaderboard_1"
+        android:textColor="@color/white"
+        android:textSize="20dp"
         app:layout_constraintStart_toEndOf="@+id/imageview_leader_1"
-        android:layout_marginStart="24dp"
-        />
+        app:layout_constraintTop_toBottomOf="@+id/tv_leaderboard_1" />
+
     <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textColor="@color/white"
-        android:textSize="22dp"
         android:id="@+id/tv_leaderboard_2"
-        android:text="Second Place"
-        android:fontFamily="@font/gotham_medium"
-        app:layout_constraintTop_toTopOf="@+id/imageview_leader_2"
-        app:layout_constraintStart_toEndOf="@+id/imageview_leader_2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
         android:layout_marginTop="16dp"
-        />
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textColor="@color/white"
-        android:textSize="20dp"
-        android:id="@+id/tv_name_2"
-        android:text="Prajesh"
-        android:fontFamily="@font/gotham_regular"
-        app:layout_constraintTop_toBottomOf="@+id/tv_leaderboard_2"
-        app:layout_constraintStart_toEndOf="@+id/imageview_leader_2"
-        android:layout_marginStart="24dp"
-        />
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:fontFamily="@font/gotham_medium"
         android:textColor="@color/white"
         android:textSize="22dp"
-        android:id="@+id/tv_leaderboard_3"
-        android:text="Third Place"
-        android:fontFamily="@font/gotham_medium"
-        app:layout_constraintTop_toTopOf="@+id/imageview_leader_3"
-        app:layout_constraintStart_toEndOf="@+id/imageview_leader_3"
-        android:layout_marginStart="24dp"
-        android:layout_marginTop="16dp"
-        />
+        app:layout_constraintStart_toEndOf="@+id/imageview_leader_2"
+        app:layout_constraintTop_toTopOf="@+id/imageview_leader_2" />
+
     <TextView
+        android:id="@+id/tv_name_2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="24dp"
+        android:fontFamily="@font/gotham_regular"
         android:textColor="@color/white"
         android:textSize="20dp"
-        android:id="@+id/tv_name_3"
-        android:text="Prajesh"
-        android:fontFamily="@font/gotham_regular"
-        app:layout_constraintTop_toBottomOf="@+id/tv_leaderboard_3"
-        app:layout_constraintStart_toEndOf="@+id/imageview_leader_3"
+        app:layout_constraintStart_toEndOf="@+id/imageview_leader_2"
+        app:layout_constraintTop_toBottomOf="@+id/tv_leaderboard_2" />
+
+    <TextView
+        android:id="@+id/tv_leaderboard_3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
-        />
+        android:layout_marginTop="16dp"
+        android:fontFamily="@font/gotham_medium"
+        android:textColor="@color/white"
+        android:textSize="22dp"
+        app:layout_constraintStart_toEndOf="@+id/imageview_leader_3"
+        app:layout_constraintTop_toTopOf="@+id/imageview_leader_3" />
+
+    <TextView
+        android:id="@+id/tv_name_3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="24dp"
+        android:fontFamily="@font/gotham_regular"
+        android:textColor="@color/white"
+        android:textSize="20dp"
+        app:layout_constraintStart_toEndOf="@+id/imageview_leader_3"
+        app:layout_constraintTop_toBottomOf="@+id/tv_leaderboard_3" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
