--- a/app/src/main/res/layout/fragment_resfaqs.xml
+++ b/app/src/main/res/layout/fragment_resfaqs.xml
@@ -23,6 +23,16 @@
             android:layout_alignParentEnd="true"
             android:layout_marginTop="16dp" />
 
+        <TextView
+            android:id="@+id/tv_internetcheck"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:text="Check your internet !"
+            android:textColor="@color/white"
+            android:textSize="24dp"
+            android:visibility="invisible"/>
+
 
 </RelativeLayout>
 
