leaderboard view fix

--- a/app/src/main/res/layout/fragment_leaderboard.xml
+++ b/app/src/main/res/layout/fragment_leaderboard.xml
@@ -63,6 +63,7 @@
         android:id="@+id/tv_leaderboard_1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:text="First Place"
         android:layout_marginStart="24dp"
         android:layout_marginTop="16dp"
         android:fontFamily="@font/gotham_medium"
@@ -86,6 +87,7 @@
         android:id="@+id/tv_leaderboard_2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:text="Second Place"
         android:layout_marginStart="24dp"
         android:layout_marginTop="16dp"
         android:fontFamily="@font/gotham_medium"
@@ -109,6 +111,7 @@
         android:id="@+id/tv_leaderboard_3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:text="Third Place"
         android:layout_marginStart="24dp"
         android:layout_marginTop="16dp"
         android:fontFamily="@font/gotham_medium"
