fonts and nav icons

--- a/app/src/main/res/layout/fragment_submissions.xml
+++ b/app/src/main/res/layout/fragment_submissions.xml
@@ -39,12 +39,14 @@
                 <com.google.android.material.tabs.TabItem
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Guidelines" />
+                    android:text="Guidelines"
+                    android:fontFamily="@font/gotham_medium"/>
 
                 <com.google.android.material.tabs.TabItem
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Leaderboard" />
+                    android:text="Leaderboard"
+                    android:fontFamily="@font/gotham_medium"/>
 
 
             </com.google.android.material.tabs.TabLayout>
