--- a/app/src/main/res/layout/item_timelineday1.xml
+++ b/app/src/main/res/layout/item_timelineday1.xml
@@ -40,6 +40,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
+            android:fontFamily="@font/gotham_medium"
             android:text="Check your internet !"
             android:textColor="@color/white"
             android:textSize="24dp"
