--- a/app/src/main/res/layout/fragment_resources.xml
+++ b/app/src/main/res/layout/fragment_resources.xml
@@ -39,12 +39,14 @@
                 <com.google.android.material.tabs.TabItem
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Day 1" />
+                    android:text="Day 1"
+                    android:fontFamily="@font/gotham_medium"/>
 
                 <com.google.android.material.tabs.TabItem
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Day 2" />
+                    android:text="Day 2"
+                    android:fontFamily="@font/gotham_medium"/>
 
 
             </com.google.android.material.tabs.TabLayout>
