--- a/app/src/main/res/layout/fragment_speakers.xml
+++ b/app/src/main/res/layout/fragment_speakers.xml
@@ -26,6 +26,7 @@
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
         android:text="Check your internet !"
+        android:fontFamily="@font/gotham_medium"
         android:textColor="@color/white"
         android:textSize="24dp"
         android:visibility="invisible" />
