--- a/app/src/main/res/layout/item_speaker.xml
+++ b/app/src/main/res/layout/item_speaker.xml
@@ -41,7 +41,7 @@
             android:textSize="24dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            android:fontFamily="@font/gotham_regular"
+            android:fontFamily="@font/gotham_medium"
             android:textColor="@color/white"
             app:layout_constraintTop_toBottomOf="@+id/speaker_image"/>
 
