--- a/app/src/main/res/layout/item_timelineday1.xml
+++ b/app/src/main/res/layout/item_timelineday1.xml
@@ -15,6 +15,7 @@
             android:id="@+id/imageview_day1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:padding="16dp"
             android:adjustViewBounds="true"
             android:scaleType="fitXY"
             app:layout_constraintBottom_toTopOf="@+id/progressbarday1"
