--- a/app/src/main/res/layout/item_speaker.xml
+++ b/app/src/main/res/layout/item_speaker.xml
@@ -3,34 +3,25 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:background="@color/background"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:layout_marginBottom="16dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="24dp">
+        android:layout_marginTop="48dp">
 
 
         <ImageView
             android:id="@+id/speaker_image"
-            android:layout_width="264dp"
-            android:layout_height="116dp"
-            android:layout_marginTop="48dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:scaleType="fitXY"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <TextView
-            android:id="@+id/speaker_content"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="16dp"
-            android:layout_marginTop="24dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            android:fontFamily="@font/gotham_regular"
-            android:textColor="@color/white"
-            app:layout_constraintTop_toBottomOf="@+id/speaker_name" />
+
 
         <TextView
             android:id="@+id/speaker_name"
@@ -39,11 +30,43 @@
             android:layout_margin="16dp"
             android:layout_marginTop="24dp"
             android:textSize="24dp"
+            android:text="Name"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             android:fontFamily="@font/gotham_medium"
             android:textColor="@color/white"
             app:layout_constraintTop_toBottomOf="@+id/speaker_image"/>
+
+        <TextView
+            android:id="@+id/speaker_designation"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="16dp"
+            android:layout_marginTop="24dp"
+            android:textSize="16dp"
+            android:text="Head of Design at Amazon India"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            android:fontFamily="@font/gotham_medium"
+            android:textColor="@color/white"
+            app:layout_constraintTop_toBottomOf="@+id/speaker_name"/>
+
+        <TextView
+            android:id="@+id/speaker_content"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="12dp"
+            android:layout_marginEnd="12dp"
+            android:layout_marginTop="20dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            android:fontFamily="@font/gotham_regular"
+            android:textColor="@color/white"
+            android:text="content here"
+            android:textSize="12dp"
+            android:textAlignment="center"
+            android:lineSpacingExtra="4dp"
+            app:layout_constraintTop_toBottomOf="@+id/speaker_designation" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.core.widget.NestedScrollView>
