Resources,Leaderboard,Chapters Updated

--- a/app/src/main/res/layout/fragment_leaderboard.xml
+++ b/app/src/main/res/layout/fragment_leaderboard.xml
@@ -39,9 +39,9 @@
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
         android:text="Results to be announced soon!"
-        android:fontFamily="@font/gotham_medium"
+        android:fontFamily="@font/gotham_regular"
         android:textColor="@color/white"
-        android:textSize="16dp"
+        android:textSize="18dp"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
         android:visibility="invisible"
