--- a/app/src/main/res/layout/items_guidelines.xml
+++ b/app/src/main/res/layout/items_guidelines.xml
@@ -11,9 +11,10 @@
         android:id="@+id/tvguidelines"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:fontFamily="@font/gotham_medium"
+        android:fontFamily="@font/gotham_regular"
         android:textSize="18dp"
         android:textColor="@color/white"
+        android:lineSpacingExtra="8dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
