faq and logo fixes

--- a/app/src/main/res/layout/item_resourcesfaqs.xml
+++ b/app/src/main/res/layout/item_resourcesfaqs.xml
@@ -20,6 +20,11 @@
             android:id="@+id/faqtitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            android:layout_marginEnd="8dp"
+            android:lineSpacingExtra="8dp"
+            android:layout_toStartOf="@+id/faq_button_nested"
             android:fontFamily="@font/gotham_medium"
             android:text="This is a title"
             android:textColor="@color/white"
@@ -44,6 +49,7 @@
             android:layout_below="@+id/faqtitle"
             android:layout_marginTop="8dp"
             android:fontFamily="@font/gotham_light"
+            android:lineSpacingExtra="4dp"
             android:text="sample text here"
             android:textColor="@color/white"
             android:textSize="14dp" />
