--- a/app/src/main/res/layout/fragment_chapter.xml
+++ b/app/src/main/res/layout/fragment_chapter.xml
@@ -17,7 +17,7 @@
             android:layout_width="264dp"
             android:layout_height="116dp"
             android:layout_marginTop="48dp"
-            android:src="@drawable/stc_chapter_logo"
+            android:src="@drawable/ic_stc_logo"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -92,7 +92,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="48dp"
-            android:src="@drawable/stc_chapter_logo"
+            android:src="@drawable/ic_siam_logo_final"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/contact_chapter_stc" />
